Run surefire tests with enable preview